--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,23 @@
             android:name=".actv_selos"
             android:exported="false" />
         <activity
+            android:name=".actv_jogadores"
+            android:exported="false" />
+        <activity
+            android:name=".DBInsert">
+
+        </activity>
+        <activity
+            android:name=".DBUpdate">
+
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
+
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
